syntax = "proto3";
package Service;

import "models.proto";

message ProdsReq {
    // @inject_tag: json:"size", form:"size"
    int32 size = 1;
    // @inject_tag: uri:"pid"
    int32 prod_id = 2;
}

message ProdListResp {
    repeated ProdModel data = 1;
}

message ProdDetailtResp {
    ProdModel data = 1;
}

service ProdService {
    rpc GetProdsList(ProdsReq)  returns (ProdListResp);
    rpc GetProdsDetail(ProdsReq)  returns (ProdDetailtResp);
}